# linux-control-center

./: .gitignore  Cargo.toml  DESIGN.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/public/hyprland/schema/: options.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  persistence.rs  state.rs  types.rs  wallpaper_cache.rs  wallpaper_ipc.rs
apps/desktop/src/app/: SettingsSessionContext.tsx  appPreferences.ts  dirtyPageCounts.ts  settingsSnapshot.ts  useGlobalSettingsShortcuts.ts
apps/desktop/src/components/: DirtyBanner.tsx  DnaStrip.tsx  HyprlandRuntimeBanner.tsx  OnboardingModal.tsx  OpMessage.tsx  SearchBar.tsx  Sidebar.tsx  WriteResultPanel.tsx
apps/desktop/src/components/hyprland/: MonitorLayoutPreviewInteractive.tsx  OptionRow.tsx  SchemaCatalogPanel.tsx
apps/desktop/src/hyprland/: BezierEditorCanvas.tsx  BindEditDialog.tsx  animationRows.ts  bezierPresets.ts  bindKeyword.ts  bindRuntime.ts  dispatchers.ts  monitorHyprland.ts  monitorModes.ts  schemaGenericIpc.ts  schemaLoader.ts  schemaSettingsBridge.ts
apps/desktop/src/layout/: pageLayout.ts
apps/desktop/src/pages/: AnimationsPage.tsx  AppearancePage.tsx  HyprlandPage.tsx  HyprlandSchemaPage.tsx  KeybindingsPage.tsx  MonitorsPage.tsx  NetworkPage.tsx  PowerPage.tsx  PreferencesPage.tsx  ProfilesPage.tsx  RecentOperationsPage.tsx  RofiPage.tsx  SearchResultsPage.tsx  SnapshotsPage.tsx  SystemdPage.tsx  ThemeManagerPage.tsx  WallpapersPage.tsx  WaybarPage.tsx  WindowRulesPage.tsx
apps/desktop/src/search/: index.ts  schemaSearchBoost.ts
apps/desktop/src/tauri/: api.ts  types.ts
apps/desktop/src/theme/: componentStyles.ts  playstationDark.ts
apps/desktop/src/types/: backend.ts  settings.ts
crates/adapters-hyprland/: Cargo.toml
crates/adapters-hyprland/src/: adapter.rs  ipc_keyword.rs  lib.rs  reader.rs  types.rs
crates/adapters-network/: Cargo.toml
crates/adapters-network/src/: lib.rs
crates/adapters-power/: Cargo.toml
crates/adapters-power/src/: lib.rs
crates/adapters-rofi/: Cargo.toml
crates/adapters-rofi/src/: adapter.rs  lib.rs  reader.rs  types.rs
crates/adapters-systemd/: Cargo.toml
crates/adapters-systemd/src/: adapter.rs  dto.rs  fixture.rs  lib.rs  types.rs
crates/adapters-waybar/: Cargo.toml
crates/adapters-waybar/src/: adapter.rs  lib.rs  reader.rs  reload.rs  types.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: diff.rs  error.rs  fixture.rs  journal.rs  lib.rs  profile.rs  settings.rs  snapshot.rs  theme.rs  validate.rs  wallpaper.rs
crates/journal-store/: Cargo.toml
crates/journal-store/src/: lib.rs
crates/privileged-helper/: Cargo.toml
crates/privileged-helper/src/: allowlist.rs  lib.rs  ops.rs  types.rs  validate.rs
crates/wallpaper-catalog/: Cargo.toml
crates/wallpaper-catalog/src/: lib.rs  scan.rs
crates/wallpaper-engine-adapter/: Cargo.toml  README.md
crates/wallpaper-engine-adapter/src/: cli.rs  lib.rs
docs/: architecture-v2.md  architecture.md  phase-1-checklist.md
fixtures/hyprland/: hyprland.conf
fixtures/rofi/: config.rasi
fixtures/waybar/: config.jsonc
packaging/arch/: PKGBUILD  linux-control-center-0.0.0.r3.g9832787-1-x86_64.pkg.tar.zst  linux-control-center-0.0.0.r6.g8e4563d-1-x86_64.pkg.tar.zst  linux-control-center-0.0.0.r7.g7a23b5d-1-x86_64.pkg.tar.zst  linux-control-center-debug-0.0.0.r3.g9832787-1-x86_64.pkg.tar.zst  linux-control-center-debug-0.0.0.r6.g8e4563d-1-x86_64.pkg.tar.zst  linux-control-center-debug-0.0.0.r7.g7a23b5d-1-x86_64.pkg.tar.zst
packaging/arch/linux-control-center/: FETCH_HEAD  config  packed-refs
packaging/arch/linux-control-center/objects/pack/: pack-2c600dcd47a61f637eba30016657be5850981f89.idx  pack-2c600dcd47a61f637eba30016657be5850981f89.pack  pack-2c600dcd47a61f637eba30016657be5850981f89.rev  pack-a6890dc04bdd677f3e31178ec7f0dce4e2919445.idx  pack-a6890dc04bdd677f3e31178ec7f0dce4e2919445.rev  pack-e915e30b0f0a80063fed6ab0c91a911d3d5f0e3d.idx  pack-e915e30b0f0a80063fed6ab0c91a911d3d5f0e3d.rev
packaging/arch/linux-control-center/refs/heads/: main
packaging/arch/pkg/linux-control-center/: .BUILDINFO  .MTREE  .PKGINFO
packaging/arch/pkg/linux-control-center-debug/: .BUILDINFO  .MTREE  .PKGINFO
packaging/arch/pkg/linux-control-center/usr/share/applications/: linux-control-center.desktop
profiles/: default.toml
scripts/: ensure-legacy-workspace-path.sh
