[package]
name = "wallpaper-catalog"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
core-model = { path = "../core-model" }
serde = { workspace = true }
serde_json = "1.0"
sha2 = "0.10"
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = "3"
