[package]
name = "app"
version = "0.1.0"
description = "Linux Control Center — manage Hyprland, Waybar, Rofi and more"
authors = []
license = "MIT"
repository = "https://github.com/StelarShogun/linux-control-center"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
core-model = { path = "../../../crates/core-model" }
adapters-hyprland = { path = "../../../crates/adapters-hyprland" }
adapters-waybar = { path = "../../../crates/adapters-waybar" }
adapters-rofi = { path = "../../../crates/adapters-rofi" }
adapters-systemd = { path = "../../../crates/adapters-systemd" }
privileged-helper = { path = "../../../crates/privileged-helper" }
uuid = { workspace = true }
time = { workspace = true }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

[dev-dependencies]
tempfile = "3"
